# fastapi-htmx-alpine-tutorial

./: LICENSE  README.md  docker-compose.yml  makefile  test.py
app/: Dockerfile  pyproject.toml
app/src/: books.json  main.py  schemas.py
app/src/database/: __init__.py  base.py
app/src/static/: index.html
app/src/static/about/: index.html
app/src/static/books/: index.html
